CHANGES IN VERSION 0.99.9
-------------------------

BUG FIXES
    o Fixes to the Vignette and addition of citation.


CHANGES IN VERSION 0.99.9
-------------------------

BUG FIXES
    o Small fixes mainly to the Vignette and one left over problem from the git/svn
      conflict merge.


CHANGES IN VERSION 0.99.8
-------------------------

NEW FEATURES
    o FAData constructor recognizes *.ped and *.fam files and imports their
      pedigree information correctly.
    o export method to export pedigree information from a FAData to a ped or fam file.
    o Add methods getFounders and getSingletons.

SIGNIFICANT USER-VISIBLE CHANGES
    o Founders are now represented by NA in columns 'father' and 'mother'. This fixed
      potential problems when IDs are character strings and not numeric.
    o Added column 'family' to the results of the probability test.
    o genealogicalIndexTest: renamed argument prune into rm.singletons.
    o Removed prune argument for methods calculating per-individual statistics.
    o Re-formated and re-structured the vignette.

BUG FIXES
    o Validation of pedigree information in FAData improved.
    o [ subsetting now ensures that father or mother IDs which are not available
      in column 'id' are set to NA.
    o clique names are no longer dropped when setting cliques(object) <- value.


CHANGES IN VERSION 0.99.6
-------------------------

NEW FEATURES
    o Monte Carlo simulation to assess significance of familial incidence
      rate and familial standardized incidence rates.
    o New FAIncidenceRateResults object along with its methods.
    o New FAStdIncidenceRateResults object along with its methods.
    o New function factor2matrix to convert a factor into a matrix.

SIGNIFICANT USER-VISIBLE CHANGES
    o Vignette: extended content and adapted to use Bioconductor style.
    o Results from the kinship sum test are now, in addition to the p-value, also
      sorted by the kinship sum.

BUG FIXES